# test_taska

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  env.tpl  exampleOpenWeatherAPI.json  handlers.py  handlers_old.py  keyboard.py  main_polling.py  old_requirements.txt  pyproject.toml  test_taska.py  test_taska_control.sh  test_taska_old.py  try_manager.py
nginx/: Dockerfile  entrypoint.sh  server.conf_tpl
test_taska/: base_manager.py  main_polling.py  main_webhook.py  main_webhook_nkorgik.py  main_webhook_soso.py  pre_main.py  test_taska.py
test_taska/bot/handlers/: cmd_handlers.py  dif_handlers.py  ib_handlers.py  old_handlers.py  txt_handlers.py  user_handlers.py
test_taska/bot/keyboards/: ikb_keyboards.py  kb_keyboards.py  user_keyboards.py
test_taska/bot/texts/: user_texts.py
test_taska/bot/utils/: Untitled Diagram.drawio  animal.py  api_utils.py  exchange.py  states.py  weather.py
