[tool.poetry]
name = "test-taska"
version = "1.0.0"
description = ""
authors = ["DanyaSh <danilashundeev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.25.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
